--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,11 @@
 {
-  "plugins": ["prettier-plugin-tailwindcss"]
+	"plugins": ["prettier-plugin-tailwindcss"],
+	"tabWidth": 2,
+	"semi": true,
+	"bracketSpacing": true,
+	"bracketSameLine": true,
+	"useTabs": true,
+	"trailingComma": "none",
+	"arrowParens": "avoid",
+	"printWidth": 120
 }
