--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-storybook": "^9.1.6",
     "jest": "^30.1.3",
     "jest-environment-jsdom": "^30.1.2",
