--- a/.github/workflows/random-reviewers.yml
+++ b/.github/workflows/random-reviewers.yml
@@ -4,6 +4,9 @@ on:
   pull_request:
     types: [opened, ready_for_review]
 
+permissions:
+  pull-requests: write
+
 jobs:
   add-reviewers:
     runs-on: ubuntu-latest
